fixed nav logo spacing prob for mobile devices

--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -272,7 +272,7 @@ transition: background-position 0.3s ease;:
         background-color: black;
     }
     .sec1{
-        margin-left: 4%;
+        /* margin-left: 4%; */
     }
     .nav-logo>a>img {
         padding-top: 0.4em;
